[project]
name = "llm-demos"
version = "0.2.0"
description = "LangChain and LangGraph assistant chat demos"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith[claude-agent-sdk]>=0.8.8",
    "python-dotenv>=1.0.0",
]

[project.scripts]
langchain-demo = "langchain_demo.main:main"
langgraph-demo = "langgraph_demo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "langchain_demo", "langgraph_demo"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.2.0",
]

[tool.uv]
package = true
